finished the prpject

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 
         <nav class="nav">
           <ul class="nav__list">
-            <li class="nav__item">
+            <!-- <li class="nav__item">
               <button class="nav__btn nav__btn--add-recipe">
                 <svg class="nav__icon">
                   <use href="src/img/icons.svg#icon-edit"></use>
                 </svg>
                 <span>Add recipe</span>
               </button>
-            </li>
+            </li> -->
             <li class="nav__item">
               <button class="nav__btn nav__btn--bookmarks">
                 <svg class="nav__icon">
@@ -254,7 +254,8 @@
     <div class="add-recipe-window hidden">
       <button class="btn--close-modal">&times;</button>
       <form class="upload">
-        <div class="upload__column">
+        <!-- <p>Due to tecnical issues the server is not accepting </p> -->
+        <!-- <div class="upload__column">
           <h3 class="upload__heading">Recipe data</h3>
           <label>Title</label>
           <input value="TEST" required name="title" type="text" />
@@ -319,7 +320,7 @@
             <use href="src/img/icons.svg#icon-upload-cloud"></use>
           </svg>
           <span>Upload</span>
-        </button>
+        </button> -->
       </form>
     </div>
   </body>
